--- a/index.html
+++ b/index.html
@@ -1,68 +1,52 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>11LOTUS | Official</title>
 <script src=""></script>
 <style>
-body { margin: 0; background: #050505; color: #fff; font-family: sans-serif; text-align: center; }
-.logo { font-size: 40px; color: #d4af37; margin: 50px 0 10px 0; letter-spacing: 10px; text-transform: uppercase; }
-.container { padding: 20px; max-width: 420px; margin: 0 auto; }
-#reader { width: 100%; min-height: 250px; background: #000; border: 1px dashed #d4af37; border-radius: 10px; margin-bottom: 20px; }
-.btn { padding: 18px; border: 1px solid #d4af37; color: #d4af37; background: transparent; cursor: pointer; font-weight: bold; text-transform: uppercase; letter-spacing: 2px; width: 100%; margin-top: 10px; font-size: 14px; }
-.btn:active { background: #d4af37; color: #000; }
-input { background: #111; border: 1px solid #333; color: #fff; padding: 14px; width: 90%; margin: 10px 0; text-align: center; border-radius: 5px; }
-#home-ui { display: block; }
-#scan-ui, #chat-ui { display: none; }
+body { background:#050505; color:#fff; font-family:sans-serif; text-align:center; padding-top:50px; margin:0; }
+.logo { font-size: 35px; color: #d4af37; letter-spacing: 8px; margin-bottom: 40px; }
+.btn { padding:18px; width:80%; border:1px solid #d4af37; color:#d4af37; background:none; font-weight:bold; cursor:pointer; text-transform:uppercase; letter-spacing:2px; }
+#reader { width:100%; max-width:350px; margin:20px auto; background:#111; display:none; border:1px dashed #444; min-height:250px; }
+#interface { display:none; padding:20px; }
+input { background:#111; border:1px solid #333; color:#fff; padding:12px; width:85%; margin:10px; text-align:center; border-radius:5px; }
 </style>
 </head>
 <body>
 
-<div id="home-ui" class="container">
+<div id="home">
 <div class="logo">11LOTUS</div>
-<p style="color:#666; font-size: 11px; letter-spacing: 2px; margin-bottom: 40px;">WHERE SOULS CONNECT</p>
-<button class="btn" onclick="openScannerNow()">Unlock Your Soul</button>
+<button class="btn" onclick="openCameraNow()">Unlock Your Soul</button>
 </div>
 
-<div id="scan-ui" class="container">
-<h2 style="color:#d4af37; font-size: 16px; margin-bottom: 20px;">SCAN RABBIT KEY</h2>
+<div id="interface">
 <div id="reader"></div>
 <input type="text" id="pid" placeholder="Partner QR ID">
 <input type="password" id="pass" placeholder="Secret Password">
-<button class="btn" onclick="enterSanctuary()">Enter Sanctuary</button>
-<p style="color:#444; font-size: 10px; margin-top: 20px; cursor:pointer;" onclick="location.reload()">Back to Home</p>
-</div>
-
-<div id="chat-ui" class="container">
-<div id="soul-name" style="color:#d4af37; margin-bottom: 15px; letter-spacing: 2px;"></div>
-<div id="display" style="height: 350px; border: 1px solid #222; background: #080808; text-align: left; padding: 15px; overflow-y: auto; font-size: 13px; border-radius: 10px;"></div>
+<button class="btn" onclick="alert('System Connecting to Firebase...')">Enter Sanctuary</button>
 </div>
 
 <script>
-let scannerObj;
+function openCameraNow() {
+document.getElementById('home').style.display = 'none';
+document.getElementById('interface').style.display = 'block';
+document.getElementById('reader').style.display = 'block';
 
-function openScannerNow() {
-// UI Change
-document.getElementById('home-ui').style.display = 'none';
-document.getElementById('scan-ui').style.display = 'block';
+const html5QrCode = new Html5Qrcode("reader");
+const config = { fps: 10, qrbox: { width: 250, height: 250 } };
 
+html5QrCode.start({ facingMode: "environment" }, config,
+(decodedText) => {
+document.getElementById('pid').value = decodedText;
+html5QrCode.stop();
+alert("QR Scanned Successfully!");
 }
-
-function enterSanctuary() {
-const id = document.getElementById('pid').value;
-const p = document.getElementById('pass').value;
-if(id && p) {
-document.getElementById('scan-ui').style.display = 'none';
-document.getElementById('chat-ui').style.display = 'block';
-const n = ["Obsidian Rabbit", "Moonlight Lotus", "Velvet Shadow", "Silent Petal", "Astral Bunny", "Golden Whisper"];
-const name = n[(id.length + p.length) % n.length];
-document.getElementById('soul-name').innerText = "IDENTITY: " + name;
-document.getElementById('display').innerHTML = &lt;div style=&quot;color:#444&quot;&gt;Welcome, ${name}. Secure bridge active...&lt;/div&gt;;
-} else {
-alert("Scan QR and set Password.");
-}
+).catch(err => {
+alert("Camera Access Denied. Please Allow Permissions.");
+});
 }
 </script>
 
