--- a/index.html
+++ b/index.html
@@ -1,57 +1,53 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>11LOTUS | Official</title>
+<title>11LOTUS | Souls Sanctuary</title>
+<script src=""></script>
+<script src=""></script>
 <style>
-body { background:#050505; color:#fff; font-family:sans-serif; text-align:center; padding-top:50px; margin:0; }
-.logo { font-size: 35px; color: #d4af37; letter-spacing: 8px; margin-bottom: 40px; }
-.btn { padding:18px; width:80%; border:1px solid #d4af37; color:#d4af37; background:none; font-weight:bold; cursor:pointer; text-transform:uppercase; }
-#video { width:100%; max-width:350px; background:#111; border:2px solid #d4af37; display:none; margin:20px auto; border-radius:10px; }
-#interface { display:none; padding:20px; }
-input { background:#111; border:1px solid #333; color:#fff; padding:12px; width:85%; margin:10px; text-align:center; border-radius:5px; }
+body { background:#050505; color:#fff; font-family:sans-serif; text-align:center; margin:0; overflow-x:hidden; }
+.logo { font-size: 35px; color: #d4af37; letter-spacing: 8px; margin: 50px 0; text-transform: uppercase; text-shadow: 0 0 15px rgba(212,175,55,0.4); }
+.container { padding: 20px; max-width: 400px; margin: 0 auto; }
+#video { width: 100%; border: 1px solid #d4af37; border-radius: 10px; display: none; margin-bottom: 20px; box-shadow: 0 0 15px rgba(212,175,55,0.2); }
+.btn { padding:15px; width:100%; border:1px solid #d4af37; color:#d4af37; background:none; font-weight:bold; cursor:pointer; text-transform:uppercase; margin-top: 10px; transition: 0.3s; }
+.btn:hover { background: #d4af37; color: #000; }
+input { background:#111; border:1px solid #333; color:#fff; padding:12px; width:92%; margin:10px 0; text-align:center; border-radius:5px; font-size: 14px; }
+#chat-room { display: none; }
+#messages { height: 380px; border: 1px solid #222; background: #080808; overflow-y: auto; padding: 15px; text-align: left; border-radius: 10px; margin-bottom: 10px; }
+.msg { margin-bottom: 12px; border-left: 2px solid #d4af37; padding-left: 10px; font-size: 14px; line-height: 1.4; }
+.msg b { color: #d4af37; font-size: 10px; display: block; text-transform: uppercase; margin-bottom: 3px; letter-spacing: 1px; }
+#status { color:#d4af37; font-size:10px; margin-bottom:15px; letter-spacing:2px; text-transform: uppercase; }
 </style>
 </head>
 <body>
 
-<div id="home">
+<div id="login-ui" class="container">
 <div class="logo">11LOTUS</div>
-<button class="btn" onclick="openDirectCam()">Unlock Your Soul</button>
+<video id="video" autoplay playsinline></video>
+<button id="cam-btn" class="btn" onclick="openCam()">Scan Rabbit Key</button>
+
 </div>
 
-<div id="interface">
-<video id="video" autoplay playsinline></video>
-<p id="status" style="font-size:12px; color:#666;">Align Rabbit QR in front of camera</p>
-<input type="text" id="pid" placeholder="Partner QR ID">
-<input type="password" id="pass" placeholder="Secret Password">
-<button class="btn" onclick="alert('Connecting to Sanctuary...')">Enter Sanctuary</button>
+<div id="chat-room" class="container">
+<div id="status"></div>
+<div id="messages"></div>
+<div style="display:flex; gap:5px;">
+<input type="text" id="msg-input" placeholder="Whisper to your soul..." style="margin:0; width:75%;">
+<button onclick="send()" style="width:20%; background:#d4af37; border:none; border-radius:5px; font-weight:bold; cursor:pointer; color:#000;">></button>
+</div>
 </div>
 
 <script>
-async function openDirectCam() {
-document.getElementById('home').style.display = 'none';
-document.getElementById('interface').style.display = 'block';
-const video = document.getElementById('video');
-video.style.display = 'block';
+// Firebase Configuration
+const firebaseConfig = {
+databaseURL: ""
+};
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
 
-try {
-const stream = await navigator.mediaDevices.getUserMedia({
-video: { facingMode: "environment" }
-});
-video.srcObject = stream;
-} catch (err) {
-alert("Camera Error: " + err.message);
-// ෆ්‍රන්ට් කැමරාවෙන් ට්‍රයි එකක් දෙමු
-try {
-const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-video.srcObject = stream;
-} catch (e) {
-alert("Still failing. Please check phone settings.");
-}
-}
-}
 </script>
 
 </body>
