--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@ input { background:#111; border:1px solid #333; color:#fff; padding:12px; width:
 <div class="logo">11LOTUS</div>
 <video id="video" autoplay playsinline></video>
 <button id="cam-btn" class="btn" onclick="openCam()">Scan Rabbit Key</button>
-
 <div id="form" style="margin-top:20px;">
-    <input type="text" id="roomID" placeholder="Partner QR ID">
-    <input type="password" id="pass" placeholder="Enter Secret Password">
-    <button class="btn" onclick="connect()">Unlock Sanctuary</button>
+<input type="text" id="roomID" placeholder="Partner QR ID">
+<input type="password" id="pass" placeholder="Enter Secret Password">
+<button class="btn" onclick="connect()">Unlock Sanctuary</button>
 </div>
 <p style="font-size: 10px; color: #444; margin-top: 20px;">Use the matching ID & Password from your soul card.</p>
 </div>
@@ -47,7 +46,6 @@ input { background:#111; border:1px solid #333; color:#fff; padding:12px; width:
 </div>
 
 <script>
-// Firebase Configuration
 const firebaseConfig = {
 databaseURL: "https://lotus-chat-default-rtdb.firebaseio.com/"
 };
@@ -57,13 +55,11 @@ const db = firebase.database();
 let currentRoom = &quot;&quot;;
 let myName = &quot;&quot;;
 
-// 1. Auto-fill ID from URL (QR කේතය ස්කෑන් කර පැමිණි විට)
 window.onload = function() {
     const urlParams = new URLSearchParams(window.location.search);
     const idFromQR = urlParams.get(&#39;id&#39;);
     if (idFromQR) {
         document.getElementById(&#39;roomID&#39;).value = idFromQR;
-        console.log(&quot;QR ID Recognized: &quot; + idFromQR);
     }
 };
 
@@ -86,22 +82,18 @@ function connect() {
 
     currentRoom = id.trim();
     const names = [&quot;Obsidian&quot;, &quot;Moonlight&quot;, &quot;Velvet&quot;, &quot;Silent&quot;, &quot;Astral&quot;, &quot;Golden&quot;];
-    // නම තීරණය වන්නේ පාස්වර්ඩ් එක සහ ID එක අනුවයි
     myName = names[(id.length + p.length) % names.length] + &quot; Soul&quot;;
 
     document.getElementById(&#39;login-ui&#39;).style.display = &#39;none&#39;;
     document.getElementById(&#39;chat-room&#39;).style.display = &#39;block&#39;;
     document.getElementById(&#39;status&#39;).innerText = &quot;CONNECTED AS: &quot; + myName;
-
-    // පරණ මැසේජ් පිරිසිදු කිරීම
     document.getElementById(&#39;messages&#39;).innerHTML = &quot;&quot;;
 
-    // Listen for Messages
     db.ref(&quot;rooms/&quot; + currentRoom).on(&quot;child_added&quot;, (snap) =&gt; {
         const data = snap.val();
         const div = document.createElement(&quot;div&quot;);
         div.className = &quot;msg&quot;;
-        div.innerHTML = `&lt;b&gt;${data.user}&lt;/b&gt;${data.text}`;
+        div.innerHTML = &quot;&lt;b&gt;&quot; + data.user + &quot;&lt;/b&gt;&quot; + data.text;
         document.getElementById(&#39;messages&#39;).appendChild(div);
         document.getElementById(&#39;messages&#39;).scrollTop = 99999;
     });
@@ -118,7 +110,6 @@ function send() {
     }
 }
 
-// Enter key එකෙන් මැසේජ් යැවීමට
 document.getElementById(&quot;msg-input&quot;).addEventListener(&quot;keyup&quot;, function(event) {
     if (event.key === &quot;Enter&quot;) {
         send();
